dataset1235/2025-2/2318198438/users/1225947802/executions/1897677159_704983377.log
== RUN (2025-08-21 00:55:05)
-- CODE: 
X = int(input())
Y = int(input())
q =  X//Y
r= X % Y
div_real= X / y 
produto = X + Y 
pot= y **3
print(q)
print(r)
print(div_real)
print(produto)
print(pot)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:56:20)
-- CODE: 
X = int(input())
Y = int(input())
q =  X//Y
r= X % Y
div_real= X / Y
produto = X*Y 
pot= Y **3

print(q)
print(r)
print(div_real)
print(produto)
print(pot)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:53:31)
-- CODE: 
X = int(input())
Y = int(input())
q =  X//Y
r= X % Y
div_real= X / y 
produto = X + Y 
pot= y **3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    div_real= X / y 
                  ^
NameError: name 'y' is not defined. Did you mean: 'Y'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
